css/sentaku.css
/*
Theme Name:sentakubasami
Theme URI:
Description: special site theme
Version: 1
Author: ryu-g,Yayoi
Author URI:
*/

/*font-family*/
@font-face {
  font-family: '?ǰ';
  src: url('?ե????ե??????ѥ?') format('?ե??`?ޥå??');
}

h1 {
  font-family: '?ǰ	';
}

@font-face{
  font-family: 'mplus-1p-regular';
  src: url('http://mplus-webfonts.sourceforge.jp/mplus-1p-regular.eot'),
       url('http://mplus-webfonts.sourceforge.jp/mplus-1p-regular.eot?#iefix') format('embedded-opentype'),
       url('http://mplus-webfonts.sourceforge.jp/mplus-1p-regular.woff') format('woff'),
       url('http://mplus-webfonts.sourceforge.jp/mplus-1p-regular.ttf') format('truetype');
}

p {
  font-family: 'mplus-1p-regular', sans-serif;
  font-size:16px;
}

*{
  font-family:'mplus-1p-regular', sans-serif;
}

h1{
	display: inline-block;
	font-family:'mplus-1p-regular';
	font-size:22px;
	color:#333333;
	text-align: center;
	width: 140px;
	height:20px;
	border: 2px solid #82636b;
	border-radius: 200px 15px 185px 15px / 15px 200px 15px 185px;
	margin-bottom: 10px;
	padding: 5px 10px 10px;

}

h1#abstract{
  display: inline-block;
  font-family:'mplus-1p-regular';
  font-size:22px;
  color:#333333;
  text-align: center;
  width: 140px;
  height:20px;
  border: 2px solid #FFFFFF;
  border-radius: 200px 15px 185px 15px / 15px 200px 15px 185px;
  margin: 10px 0;
  padding: 10px;
}

h2{
  font-family:'mplus-1p-regular';
  font-size:18px;
}

h3{
  font-family:'mplus-1p-regular';
  font-size:16px;
}

h4{
  font-family:'mplus-1p-regular';
  font-size:12px;
}

a:link { color: #f39800; }/*default*/
a:visited { color: #f39800; } /*visited dlink*/
a:hover { color: #ffba00; }/*hover*/
a:active { color: #ffba00; }/*active*/
a{text-decoration: none;} /*delete underline*/

header{
	background-color: #f39800;
	width:100%;
	height:50px;
	position: relative;
}
header > a > img{
	display: block;
	height:45px;
	width: auto;
	margin:0 auto;
}
body{
  /*バックグラウンドを方眼紙に*/
       background-color: #FFF;
    /*min-height: 418px;*/
    /*padding: 0px 10px 10px;*/
    background-image:
        -webkit-linear-gradient(
            transparent 95%,
            rgba(0, 144, 255, .2) 50%,
            rgba(0, 144, 255, .2)),
        -webkit-linear-gradient(
            0deg, transparent 95%,
            rgba(0, 144, 255, .2) 50%,
            rgba(0, 144, 255, .2)
            );
    background-size: 20px 20px;
    background-repeat: repeat;
}

div.container{
	width: 100%;
	max-width: 900px;
	margin: 10px auto;
	text-align: center;
	overflow: hidden;
}

div#head{
	position: relative;
	width: 900px;
	height: 500px;

}

div#holdtime{
	z-index: 1;
	position: absolute;
	right: 0px;
	top:450px;
	margin-bottom: 50px;
}

div#about{
	text-align: center;
	padding: 0px 0;
	color: #FFF;
}
	div.aboutBG > img {
		width: 100%;
		min-width: 1000px;
	}

	div.aboutBG{
    text-align:center;
    width:100%;
		position: relative;
    bottom:8px;
	}

	div.aboutAbsolute{
		position: absolute;
		top: 0;
		right: 0;
		left:0;
		bottom:200px;
		margin:100px  auto;
		width: 800px;
		height: 100px
	}
	div.readAbout{
		width: 80%;
		margin: 0 auto;
	}
	div.block >img{
		margin:  0 10px;
	}
	div#sample >img {
	width:100%;
	margin-top: -15px;
	padding-bottom:20px;
}
div#artist{
  padding-top:40px;
}

div#artist > p {
  padding-left:20px;
}

div#info{
	width: 100%;
}
	.infoBG{
		display: block;
		position: relative;
		min-width: 900px;
	}
	.infoTable{
		width: 620px;
		height: 270px;
		position: absolute;
		top: 20;
		left: 0;
		right: 0;
		bottom: 0;
		margin: auto;
	}

div#event{
	text-align: center;
}
	div.EventBG{
		position: relative;
		min-width: 900px;
    top:10px;
	}

	div.EVabsolute{
		position: absolute;
		top:100px;
		right:0;
		left: 0;
	}
	div.EVabsolute > div.block{
		width: 400px;
		margin: 10px auto;
	}
	div.EVabsolute > div.block >img{
		margin: 0 20px;
		width: 50px;
		height: 50px;
	}
	div.EVabsolute > div.block >div{
	text-align: left;
	}
	div.EVabsolute > *{
		color: #bbb;
	}

div#access {
	text-align: center;
	display: block;
	margin: 0 auto;
}


div.AccessBG{
  position:relative;
  bottom:0px;
  right:0;
  left:0;
}

div.ACabsolute{
  position:absolute;
  top:110px;
  right:0;
  left:0;
}

#map2{
  top:20px;
}

div#contact{
	width: 100%;
}
	div.accessTable{
		width:50%;
		margin-left:auto;
    margin-right:auto;
	}

	div.block{
		display: flex;
		flex-direction: row;
		align-content: flex-start;
		text-align: left;
		margin:5px auto;
	}

	div.block > h3 {
		width:90px;
		margin-right: 10px;
		margin-left:  20px;
	}

div#pageTop{
 position:fixed;
 bottom:20px;
  right:20px;

}

footer{
	background-color: #f39800;
	width: 100%;
	height: 40px;
}

small{
	color: #fff;
	display:inline-block;
	font-size: 10px;
	text-align: center;
	width: 100%;
	margin: auto auto;
}

